--- a/app/templates/components/correction-unit.hbs
+++ b/app/templates/components/correction-unit.hbs
@@ -14,12 +14,15 @@
        <hr>
 
        <button class="btn btn-sm btn-primary" style="width: 250px; margin-left:0px">Stáhnout řešení</button>-->
-       <div class="form-group" style="margin-top:20px">
-         <form style="margin: 0; padding: 0;">
-          <p>
+       {{#each model.modules as |module|}}
+       <div class="form-group" style="margin-top:20px col-md-12">
             <label>Body: </label>
-            <input id="points" style="display: inline;" type="input" class="form-control col-md-1"/> <!-- body -->
-            <label>Přidat trofej: </label>
+            {{input style="display: inline;" class="form-control" size="4" value=model.evaluation.e.points}}      
+       </div>
+       {{/each}}
+
+       <div class="form-group" style="margin-top:10px">
+         <label>Přidat trofej: </label>
             <select class="form-control col-md-1">
               <option><img src="http://placehold.it/30x30"> trofej</option> <!-- TODO obrazky z databaze -->
               <option><img src="http://placehold.it/30x30"> trofej</option>
@@ -27,13 +30,10 @@
             </select>
             <label> Trofeje:</label>
             <img src="http://placehold.it/30x30"> <!-- TODO kliknutim smazat -->
-          </p>
           {{#if invalid_data}}
              {{info-general text=invalid_data}}
-           {{/if}}
-        </form>
+          {{/if}}
        </div>
-
        <div class="form-group" style="margin-top:20px">
          <label>Komentář:</label>
          {{#if model.comment}}
