--- a/app/templates/components/correction-general.hbs
+++ b/app/templates/components/correction-general.hbs
@@ -18,5 +18,13 @@
 	{{input style="display: inline;" class="form-control" size="4" value=module.evaluation.points}}  
 	<a href="javascript:void()" {{action "all"}}> Stáhnout všechny soubory v ZIP archivu</a>    
 	</div>
+	
+	<div class="col-md-12">
+		<button class="btn btn-primary" {{action "log"}}>{{if show_log "Skrýt log" "Zobrazit log"}}</button>
+		{{#if show_log}}
+			{{textarea class="form-control" style="min-width: 100%;" rows="10" readonly="true" value=module.evaluation.full_report}}
+		{{/if}}
+	</div>
+	
 </div>
 </div>
