--- a/app/templates/admin/correcting.hbs
+++ b/app/templates/admin/correcting.hbs
@@ -14,9 +14,9 @@
           {{/x-select}}
         </div>
         <div class="col-md-3">
-          <label style="margin-left:20px">Vyber příklad</label>
+          <label style="margin-left:20px">Vyber úlohu</label>
           <select {{action "task_select"}} class="form-control" id="task_sel">
-            <option value="">Všechny příklady</option>
+            <option value="">Všechny úlohy</option>
             {{#each tasks as |t|}}
                 <option value="{{t.id}}">
                   <span style="color:
@@ -51,7 +51,7 @@
 
       <div class="col-xs-12">
         {{#if wrong-filter}}
-          {{warning-general text="Byl vybrán špatný filtr! Je třeba vybrat řešitle, příklad nebo oboje!"}}
+          {{warning-general text="Byl vybrán špatný filtr! Je třeba vybrat řešitle, úlohu nebo oboje!"}}
         {{/if}}
       </div>
       <button class="btn btn-primary inline" style="width: 250px; margin-left:0px" {{action "filter"}}>Zobrazit</button>
