--- a/app/templates/components/thread-post.hbs
+++ b/app/templates/components/thread-post.hbs
@@ -10,6 +10,9 @@
           {{#if is_reacting}} Zrušit reakci {{else}} Reagovat {{/if}}
         </button>
         <hr>
+        {{#if allow_edit}}
+          <button class="btn-xs btn-primary" style="border:none; margin-top: 10px;" {{action "edit"}}>Upravit</button>
+        {{/if}}
         {{#if admin}}
           <button class="btn-xs btn-primary" style="border:none; margin-top: 10px" {{action "delete"}}>Smazat</button>
           <button class="btn-xs btn-primary" style="border:none; margin-top: 10px" {{action "move"}}>Přesunout</button> <!-- TODO ako? -->
