--- a/app/templates/task/evaluation.hbs
+++ b/app/templates/task/evaluation.hbs
@@ -45,7 +45,7 @@
           {{#each model.details.modules as |module|}}
             <tr>
               <td style="text-align: center;">{{module.name}}</td>
-              <td>{{if module.score module.score.reviewed_by.full_name "–"}}</td>
+              <td>{{#if module.score}}{{#link-to "user-profile" module.score.reviewed_by}}{{module.score.reviewed_by.full_name}}{{/link-to}}{{else}}–{{/if}}</td>
               <td style="text-align: center;">{{#if module.score}}{{module.score.score}}/{{module.max_score}}{{else}}–{{/if}}</td>
               <td>{{if module.score "Opraveno" "Neopraveno"}}</td>
             </tr>
