Change the way corrected/not corrected is displayed

--- a/app/templates/components/correction-general.hbs
+++ b/app/templates/components/correction-general.hbs
@@ -1,5 +1,6 @@
 <div class="panel panel-ksi">
 <div class="panel-heading panel-heading-ksi">
+	{{log module}}
 	Souborový modul - {{module.module_id.name}}
 </div>
 <div class="panel-body">
