Add confirmation for publishing

--- a/app/templates/components/correction-unit.hbs
+++ b/app/templates/components/correction-unit.hbs
@@ -1,5 +1,5 @@
 <div class="panel panel-ksi">
-	  <div class="panel-heading panel-heading-ksi" style="hight:400px">
+	  <div class="panel-heading panel-heading-ksi panel-module-{{model.style}}" style="hight:400px">
       {{model.user.full_name}}
       <div style="float: right; margin-right: 50px;">
         {{model.task_id.title}}
