--- a/app/templates/components/correction-general.hbs
+++ b/app/templates/components/correction-general.hbs
@@ -1,7 +1,6 @@
 <div class="panel panel-ksi">
 <div class="panel-heading panel-heading-ksi">
-	{{log module}}
-	Souborový modul - {{module.module_id.name}}
+	Souborový modul - {{parent_module.name}}
 </div>
 <div class="panel-body">
 	<div class="col-md-6">
