Add number of participants to the results

--- a/app/templates/results.hbs
+++ b/app/templates/results.hbs
@@ -1,6 +1,7 @@
 <section id="results" class="container content-section" style="text-align:justify">
     <!-- Sekcia noviniek -->
   <h2>Výsledky</h2>
+    <b>Počet řešitelů:</b> {{results.length}}
     <table class="table table-striped">
     <thead>
       <tr style="height:45px">
