oprava odsadzania admin menu

--- a/app/templates/admin/articles.hbs
+++ b/app/templates/admin/articles.hbs
@@ -1,4 +1,4 @@
-<section id="admin-articles" class="container content-section" style=" margin-top: 20px; text-align:justify">
+<section id="admin-articles" class="container content-section" style="text-align:justify">
   <h2>Správa článků</h2>
   {{#link-to "admin/article-edit"}}nový článek{{/link-to}}
   <table class="table table-striped">
