--- a/app/templates/admin/e-mail.hbs
+++ b/app/templates/admin/e-mail.hbs
@@ -1,4 +1,4 @@
-<section id="admin-email" class="container content-section" style=" margin-top: 20px; text-align:justify">
+<section id="admin-email" class="container content-section" style="text-align:justify">
   <div class="form-group">
     <label>Od:</label>
     <input class="form-control" id="from" value="honza@mail.abc"> <!-- mail prihlaseneho orga -->
