--- a/app/templates/admin/task-edit.hbs
+++ b/app/templates/admin/task-edit.hbs
@@ -1,4 +1,4 @@
-<section id="admin-task-edit" class="container content-section" style=" margin-top: 20px; text-align:justify">
+<section id="admin-task-edit" class="container content-section" style="text-align:justify">
   <h2>Úprava úlohy</h2>
   {{#link-to "admin/tasks"}}zpět na přehled{{/link-to}}
   <div class="panel panel-ksi" style="margin-top:20px">
