--- a/app/templates/admin/tasks.hbs
+++ b/app/templates/admin/tasks.hbs
@@ -1,4 +1,4 @@
-<section id="admin-tasks" class="container content-section" style=" margin-top: 20px; text-align:justify">
+<section id="admin-tasks" class="container content-section" style="text-align:justify">
   <h2>Správa úloh</h2>
   {{#link-to "admin/task-edit"}}nová úloha{{/link-to}}
   <table class="table table-striped">
