--- a/app/templates/admin/vlny.hbs
+++ b/app/templates/admin/vlny.hbs
@@ -1,4 +1,4 @@
-<section id="admin-vlny" class="container content-section" style=" margin-top: 20px; text-align:justify">
+<section id="admin-vlny" class="container content-section" style="text-align:justify">
   <h2>Správa vln</h2>
   {{#link-to "admin/vlna-edit"}}nová vlna{{/link-to}}
   <table class="table table-striped">
