--- a/app/templates/admin/article-edit.hbs
+++ b/app/templates/admin/article-edit.hbs
@@ -1,4 +1,4 @@
-<section id="admin-article-edit" class="container content-section" style=" margin-top: 20px; text-align:justify">
+<section id="admin-article-edit" class="container content-section" style="text-align:justify">
   <h2>Úprava článku</h2>
   {{#link-to "admin/articles"}}zpět na přehled{{/link-to}}
   <div class="panel panel-ksi" style="margin-top:20px">
