--- a/app/templates/admin/export.hbs
+++ b/app/templates/admin/export.hbs
@@ -1,4 +1,4 @@
-<section id="admin-export" class="container content-section" style=" margin-top: 20px; text-align:justify">
+<section id="admin-export" class="container content-section" style="text-align:justify">
   <h2>Export dat ze systému</h2>
   <div class="panel panel-ksi">
 	  <div class="panel-heading panel-heading-ksi"><h3>Obálky</h3></div>
