--- a/app/templates/components/header-admin.hbs
+++ b/app/templates/components/header-admin.hbs
@@ -1,8 +1,8 @@
-<nav class="navbar navbar-default navbar-fixed-top navbar-left navbar-admin" style="z-index:100" id=navbaradmin>
+<nav class="navbar navbar-default navbar-static-top navbar-left navbar-admin" style="z-index:100" id=navbaradmin>
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse" aria-expanded="false">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-admin-navbar-collapse" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -12,19 +12,21 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-admin-navbar-collapse">
-      <ul class="nav navbar-nav">
-        <!--<li class="navbar-admin-li">{{#link-to "admin/e-mail"}}E-mail{{/link-to}}</li>
-        <li class="navbar-admin-li">{{#link-to "admin/export"}}Export{{/link-to}}</li>
-        <li class="navbar-admin-li">{{#link-to "admin/schools"}}Školy{{/link-to}}</li>
-        <li class="navbar-admin-li">{{#link-to "admin/users"}}Uživatelé{{/link-to}}</li>
-        <li class="navbar-admin-li">{{#link-to "admin/tasks"}}Úlohy{{/link-to}}</li>
-        <li class="navbar-admin-li">{{#link-to "admin/vlny"}}Vlny{{/link-to}}</li>
-        <li class="navbar-admin-li">{{#link-to "admin/achievements"}}Trofeje{{/link-to}}</li>
-        <li class="navbar-admin-li">{{#link-to "admin/graph"}}Graf{{/link-to}}</li>-->
-        <li class="navbar-admin-li">{{#link-to "admin/articles"}}Články{{/link-to}}</li>
-        <li class="navbar-admin-li">{{#link-to "admin/correcting"}}Opravování{{/link-to}}</li>
-        <li class="navbar-admin-li"><a href="https://github.com/fi-ksi/seminar/wiki">Wiki</a></li>
-      </ul>
+      <div class="navbar-inner">
+        <ul class="nav navbar-nav">
+          <!--<li class="navbar-admin-li">{{#link-to "admin/e-mail"}}E-mail{{/link-to}}</li>
+          <li class="navbar-admin-li">{{#link-to "admin/export"}}Export{{/link-to}}</li>
+          <li class="navbar-admin-li">{{#link-to "admin/schools"}}Školy{{/link-to}}</li>
+          <li class="navbar-admin-li">{{#link-to "admin/users"}}Uživatelé{{/link-to}}</li>
+          <li class="navbar-admin-li">{{#link-to "admin/tasks"}}Úlohy{{/link-to}}</li>
+          <li class="navbar-admin-li">{{#link-to "admin/vlny"}}Vlny{{/link-to}}</li>
+          <li class="navbar-admin-li">{{#link-to "admin/achievements"}}Trofeje{{/link-to}}</li>
+          <li class="navbar-admin-li">{{#link-to "admin/graph"}}Graf{{/link-to}}</li>-->
+          <li class="navbar-admin-li">{{#link-to "admin/articles"}}Články{{/link-to}}</li>
+          <li class="navbar-admin-li">{{#link-to "admin/correcting"}}Opravování{{/link-to}}</li>
+          <li class="navbar-admin-li"><a href="https://github.com/fi-ksi/seminar/wiki">Wiki</a></li>
+        </ul>
+      </div>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
