--- a/app/templates/admin/article-edit.hbs
+++ b/app/templates/admin/article-edit.hbs
@@ -5,11 +5,11 @@
     <div class="panel-body">
       <div class="form-group">
         <label>Titulek:</label>
-        <input type="text" class="form-control">
+        {{input value=model.title class="form-control" required=true}}
       </div>
       <div class="form-group">
         <label>Obsah:</label>
-        {{text-editor value=articleEditEditor}}
+        {{text-editor value=model.body}}
       </div>
 
       <div class="form-group">
