--- a/app/templates/registration.hbs
+++ b/app/templates/registration.hbs
@@ -4,7 +4,7 @@
   {{else}}
   {{#validatable-form action="register" model=model}}
 	<div class="jumbotron" style="background-color: transparent">
-        <div class="alert alert-warning" role="alert">Soutěž je určena pouze pro studenty středních škol.</div> 
+        <div class="alert alert-info" role="alert">Soutěž je určena pro studenty středních škol a víceletých gymnázií.</div> 
 	    <h2>Registrace</h2>
 			<div style="margin-top:30px">
 				<h4>Přihlašovací údaje</h4>
