Fix profile tasks_num.

--- a/app/templates/profile.hbs
+++ b/app/templates/profile.hbs
@@ -63,8 +63,8 @@
 						<div id="profile-points" class="inline" style="margin-left:10px">{{model.score}}</div>
 					</div>
 					<div class="col-xs-4">
-						<div id="profile-points-text" class="inline">Mých úloh: </div>
-						<div id="profile-points" class="inline" style="margin-left:10px">{{model.tasks.length}}</div>
+						<div id="profile-points-text" class="inline">Vyřešených úloh: </div>
+						<div id="profile-points" class="inline" style="margin-left:10px">{{model.tasks_num}}</div>
 					</div>
 					<div class="col-xs-4">
 						<div id="profile-points-text" class="inline">Ročníky: </div>
