--- a/app/templates/admin/article-edit.hbs
+++ b/app/templates/admin/article-edit.hbs
@@ -14,8 +14,16 @@
 
       <div class="form-group">
         <label>Termín publikace:</label>
-        <input type="date" class="form-control">
-        (v zadaném čase se zpráva nejdříve zveřejní; může i později, viz níže)
+        {{bs-datetimepicker date=model.time_published format='DD.MM.YYYY HH:MM:SS'}}
+      </div>
+
+      <div class="form-group">
+        <label>Zveřejněno:</label>
+        <!-- TODO zatim nefunguje -->
+        {{#x-select value=model.gender class="form-control" id="published" required=true}}
+            {{#x-option value="true" selected=(is-equal "true" model.published)}}ano{{/x-option}}
+            {{#x-option value="false" selected=(is-equal "false" model.published)}}ne{{/x-option}}
+        {{/x-select}}
       </div>
 
       <div class="form-group">
