Preload bottom images

--- a/app/styles/layout/footer.scss
+++ b/app/styles/layout/footer.scss
@@ -50,6 +50,7 @@ footer .footer-below {
 }
 
 /* specific logos */
+div#preload { display: none; }
  #mail-logo {
    background: url("/img/logos/email.svg") top left no-repeat;
    background-size: 50px 50px;
