--- a/app/templates/footer.hbs
+++ b/app/templates/footer.hbs
@@ -15,6 +15,17 @@
                         <a href="http://keks.math.muni.cz/" title="Korespondenční EKologický Seminář" class="footer-logo inline-footer" id="keks-logo"></a>
                         <a href="http://interlos.fi.muni.cz" title="INTERnetová LOgická Soutěž" class="footer-logo inline-footer" id="los-logo"></a>
                       </div>
+                      <div>
+                        <img src="/img/logos/email-hover.svg" width="1" height="1"/>
+                        <img src="/img/logos/facebook-hover.svg" width="1" height="1"/>
+                        <img src="/img/logos/youtube-hover.svg" width="1" height="1"/>
+                        <img src="/img/logos/logo-fi-hover.png" width="1" height="1"/>
+                        <img src="/img/logos/logo-mu-hover.png" width="1" height="1"/>
+                        <img src="/img/logos/keks-hover.svg" width="1" height="1"/>
+                        <img src="/img/logos/brkos-hover.svg" width="1" height="1"/>
+                        <img src="/img/logos/intersob-hover.svg" width="1" height="1"/>
+                        <img src="/img/logos/los-hover.svg" width="1" height="1"/>
+                      </div>
                 </div>
             </div>
         </div>
