--- a/app/templates/footer.hbs
+++ b/app/templates/footer.hbs
@@ -15,7 +15,7 @@
                         <a href="http://keks.math.muni.cz/" title="Korespondenční EKologický Seminář" class="footer-logo inline-footer" id="keks-logo"></a>
                         <a href="http://interlos.fi.muni.cz" title="INTERnetová LOgická Soutěž" class="footer-logo inline-footer" id="los-logo"></a>
                       </div>
-                      <div>
+                      <div style="opacity: 0.001;">
                         <img src="/img/logos/email-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/facebook-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/youtube-hover.svg" width="1" height="1"/>
