--- a/app/templates/admin/e-mail.hbs
+++ b/app/templates/admin/e-mail.hbs
@@ -1,31 +1,51 @@
 <section id="admin-email" class="container content-section" style="text-align:justify">
   <div class="form-group">
     <label>Od:</label>
-    <input class="form-control" id="from" value="honza@mail.abc"> <!-- mail prihlaseneho orga -->
+    {{input  class="form-control" value=sender}}
     (e-mail fyzické osoby, ne semináře, aby na něj mohly přijít zprávy o nedoručitelnosti či jiných problémech)
   </div>
   <div class="form-group">
     <label>Reply-To:</label>
-    <input class="form-control" id="reply-to" value="ksi@fi.muni.cz">
+    {{input  class="form-control" value=replyTo}}
     (sem by měli řešitelé případně odepisovat)
   </div>
   <div class="form-group">
     <label>Komu:</label>
-    <input class="form-control" id="to" value="ksi@fi.muni.cz">
+    <select {{action "to_select"}} class="form-control" id="to_sel" multiple="multiple">
+      {{#each years as |t|}}
+          <option value="{{t.id}}">{{t.year}}</option>
+      {{/each}}
+    </select>
+  </div>
+  <div class="form-group">
+    <label>Pohlaví:</label>
+    {{#x-select value=gender class="form-control"}}
+      {{#x-option value="both"}}Všichni{{/x-option}}
+      {{#x-option value="male"}}Chlapci{{/x-option}}
+      {{#x-option value="female"}}Dívky{{/x-option}}
+    {{/x-select}}
   </div>
   <div class="form-group">
     <label>Slepá kopie:</label>
-    <textarea class="form-control" style="min-width: 100%" rows="3" id="copies">ucastnik@mail.abc</textarea> <!-- maily vsetkych ucastnikov -->
+    <textarea class="form-control" style="min-width: 100%" rows="3" id="bcc">ucastnik@mail.abc</textarea> <!-- maily vsetkych ucastnikov -->
   </div>
   <div class="form-group">
     <label>Předmět:</label>
-    <input class="form-control" id="subject" value="[KSI]">
+    {{input  class="form-control" value=subject}}
   </div>
   <div class="form-group">
     <label>Obsah:</label>
-    {{text-editor value=newEmailEditor}}
+    {{text-editor value=text}}
+  </div>
+  <div class="form-group">
+    <label>Karlíkov podpis:</label>
+    {{input type="checkbox" checked=karlikSign}}
+  </div>
+  <div class="form-group">
+    <label>Easteregg:</label>
+    {{input type="checkbox" checked=easteregg}}
   </div>
   <div class="row" style="margin-bottom:20px; margin-left:0px">
-    <button class="btn btn-primary inline" id="send-email-button">Odeslat</button>
+    <button class="btn btn-primary inline" id="send-email-button" {{action "email"}}>Odeslat</button>
   </div>
 </section>
