--- a/app/templates/components/header-admin.hbs
+++ b/app/templates/components/header-admin.hbs
@@ -14,8 +14,8 @@
     <div class="collapse navbar-collapse" id="bs-admin-navbar-collapse">
       <div class="navbar-inner">
         <ul class="nav navbar-nav">
-          <!--<li class="navbar-admin-li">{{#link-to "admin/e-mail"}}E-mail{{/link-to}}</li>
-          <li class="navbar-admin-li">{{#link-to "admin/export"}}Export{{/link-to}}</li>
+          <li class="navbar-admin-li">{{#link-to "admin/e-mail"}}E-mail{{/link-to}}</li>
+          <!--<li class="navbar-admin-li">{{#link-to "admin/export"}}Export{{/link-to}}</li>
           <li class="navbar-admin-li">{{#link-to "admin/schools"}}Školy{{/link-to}}</li>
           <li class="navbar-admin-li">{{#link-to "admin/users"}}Uživatelé{{/link-to}}</li>
           <li class="navbar-admin-li">{{#link-to "admin/tasks"}}Úlohy{{/link-to}}</li>
