--- a/app/templates/admin/e-mail.hbs
+++ b/app/templates/admin/e-mail.hbs
@@ -47,5 +47,8 @@
   </div>
   <div class="row" style="margin-bottom:20px; margin-left:0px">
     <button class="btn btn-primary inline" id="send-email-button" {{action "email"}}>Odeslat</button>
+    {{#if send_status}}
+      <div class="alert alert-info" style="margin-top:20px">{{send_status}}</div>
+    {{/if}}
   </div>
 </section>
