--- a/app/templates/admin/e-mail.hbs
+++ b/app/templates/admin/e-mail.hbs
@@ -1,4 +1,5 @@
 <section id="admin-email" class="container content-section" style="text-align:justify">
+  <h2>E-mail</h2>
   <div class="form-group">
     <label>Od:</label>
     {{input  class="form-control" value=sender}}
@@ -29,7 +30,7 @@
   <div class="form-group">
     <label>Slepá kopie:</label>
     <textarea class="form-control" style="min-width: 100%" rows="3" id="bcc"></textarea>
-    (e-maily oddělujte čárkou anebo středníkem)
+    (kopie bude vždy zaslána na <a href="mailto:ksi@fi.muni.cz">ksi@fi.muni.cz</a>, e-maily oddělujte čárkou anebo středníkem)
   </div>
   <div class="form-group">
     <label>Předmět:</label>
