Graph column ordering and graph/navbar padding

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,7 +3,9 @@
         {{header-component}}
         {{#if session.isAuthenticated}}
             {{#if session.current_user.organisator}}
-              {{header-admin}}
+              <div class="row">
+                {{header-admin}}
+              </div>
             {{/if}}
         {{/if}}
     </div>
