--- a/app/templates/tasks.hbs
+++ b/app/templates/tasks.hbs
@@ -4,8 +4,13 @@
 
 <section id="graph" class="container content-section" style="text-align:justify">
 		<div class="row flex-row-md stickycolumn-parent">
+			<!-- graf -->
+			<div class="col-sm-12 col-md-11 col-md-push-2">
+				{{tasks-graph model=model.tasks sub="sub" assign="assign" stat="stat" discuss="discuss" solution="solution" }}
+			</div>
+
 			<!-- vysvetlivky -->
-			<div class="col-sm-12 col-md-1">
+			<div class="col-sm-12 col-md-1 col-md-pull-11">
 				<div id="graph-info-panel" class="panel panel-ksi stickycolumn" style="width:220px">
 				  <div class="panel-heading panel-heading-ksi"><h4 align="center">Vysvětlivky</h4></div>
 				  <div class="panel-body">
@@ -26,11 +31,6 @@
 						<p align="left">Pro odemčení úlohy musíte mít odemčené všechny hrany stejné barvy směrující do ní.</p>
 				  </div>
 				</div>
-			</div>
-
-			<!-- graf -->
-			<div class="col-sm-12 col-md-11 col-md-offset-1">
-    		{{tasks-graph model=model.tasks sub="sub" assign="assign" stat="stat" discuss="discuss" solution="solution" }}
 			</div>
 		</div>
 </section>
