--- a/app/templates/admin/e-mail.hbs
+++ b/app/templates/admin/e-mail.hbs
@@ -50,5 +50,8 @@
     {{#if send_status}}
       <div class="alert alert-info" style="margin-top:20px">{{send_status}}</div>
     {{/if}}
+    {{#if error_status}}
+      <div class="alert alert-danger" style="margin-top:20px">{{error_status}}</div>
+    {{/if}}
   </div>
 </section>
